<resources>
    <string name="app_name">BHiM Offline</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="exit">Exit</string>
    <string name="notice">1. Your mobile no must be registered with your bank account.\n2. The service providers may charge for each transactions.</string>
    <string name="description">We need this service to fetch balance from pop-up messages. It is absolutely safe to use.</string>
    <string name="action_settings">Report a bug</string>
    <string name="latest_transactions">Latest transactions</string>
    <string name="accessibility_service_not_enabled_message">"If accessibility service is turned off for this app, we can't fetch your bank balance. We read USSD message only to fetch your bank balance, that's it. So it is absolutely safe to use."</string>
    <string name="accessibility_label"><b>●● BHiM Offline ●●</b></string>
    <string name="large_text">
        "██Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="heading_register_for_upi">If you haven\'t registered on UPI, follow these steps</string>
    <string name="step1a">1. First, download and install the PhonePe App.</string>
    <string name="download_phonepe">Download PhonePe</string>
    <string name="step2">2. Open the app and follow the initial instructions.</string>
    <string name="step3">3. Verify your mobile number(standard SMS charges may apply). In case of dual sim, select the SIM that is linked to your bank account.</string>
    <string name="step4">4. Enter your name, valid email and set 4 Digit password.</string>
    <string name="step5">5. Proceed to the next step and click on Create New VPA(This will be your upi address used for future transactions).</string>
    <string name="step6">6. Select your bank and then your bank details will be fetched automatically.</string>
    <string name="step7">7. Click on \'Set MPIN\'.</string>
    <string name="step8">8. Enter details of your debit card and click on verify.</string>
    <string name="step9">9. You will get an OTP from your bank. Enter that OTP.</string>
    <string name="step10">10. Enter a 6-digit UPI PIN and re-enter to confirm. Please note that this UPI Pin will be used in the future for your all transaction. So don\'t share this pin to anyone.</string>
    <string name="step11">11. After successful registration click OK and open BHiM Offline app and click on UPDATE BALANCE.</string>
    <string name="heading_notice"><b>Important Notice</b></string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="please_turn_on">Turn on</string>
    <string name="from_accessibility_settings">from accessibility settings</string>
    <string name="button_update_balance">Refresh</string>
    <string name="other_services">Services</string>
    <string name="send_money">Send Money</string>
    <string name="request_money">Request Money</string>
    <string name="my_profile">My Profile</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="upi_pin">UPI PIN</string>
    <string name="change_bank_account">Change Bank Account</string>
    <string name="my_bank_list_detail">My Bank List Detail</string>
    <string name="my_payment_address">My Payment Address</string>
    <string name="manage_beneficiary">Manage Beneficiary</string>
    <string name="change_bank_account_condensed">Change Bank</string>
    <string name="send_money_condensed">Send</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="payment_address">Payment Address</string>
    <string name="saved_beneficiary">Saved Beneficiary</string>
    <string name="ifsc_account_no">IFSC, Account no.</string>
    <string name="mmid_mobile_no">MMID, Mobile no.</string>
    <string name="change_upi_pin_condensed">Change PIN</string>
    <string name="reset_upi_pin">Reset/Forgot UPI PIN</string>
    <string name="reset_upi_pin_condensed">Reset PIN</string>
    <string name="change_upi_pin">Change UPI PIN</string>
    <string name="loved_the_app">Loved the app?</string>
    <string name="last_updated">last updated : </string>
    <string name="never">never</string>
    <string name="balance">Balance</string>
    <string name="enter_details_to_continue">Enter details to continue</string>
    <string name="registered_mobile_no">UPI registered mobile no</string>
    <string name="select_bank">Type your bank name</string>
    <string name="button_continue">Continue</string>
    <string name="don_t_have_upi_address">Don\'t have an upi address?</string>
    <string name="download_guide">First register your mobile on UPI by downloading PhonePe or BHIM app</string>
    <string name="transactions">Transactions</string>
    <string name="upi_address_postfix">\@upi</string>
    <string name="balance_prefix">Rs</string>
</resources>
