<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/last_updated"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/balance_card_last_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/never"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/balance_card_balance"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal|center_vertical"
            android:maxLines="1"
            android:text="@string/balance"
            android:textColor="@color/colorPrimaryTextDark"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/update_balance"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:padding="16dp"
                android:stateListAnimator="@null"
                android:text="@string/button_update_balance"
                android:textSize="18sp"
                android:theme="@style/FlatButton" />

            <Button
                android:id="@+id/other_services"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:padding="16dp"
                android:stateListAnimator="@null"
                android:text="@string/other_services"
                android:textSize="18sp"
                android:theme="@style/FlatButton" />

            <!--<Button-->
            <!--android:id="@+id/other_services"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginBottom="4dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:layout_marginStart="4dp"-->
            <!--android:layout_marginTop="4dp"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/round_button"-->
            <!--android:gravity="center"-->
            <!--android:maxLines="1"-->
            <!--android:text="@string/other_services"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="14sp" />-->
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />
    </LinearLayout>
</android.support.v7.widget.CardView>