<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/light_blue"
        android:gravity="center"
        android:paddingStart="8dp"
        android:text="My Profile"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b0b0b0"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="8dp"
        android:paddingStart="8dp">

        <Button
            android:id="@+id/change_bank"
            style="@style/BottomSheetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_bank"
            android:text="@string/change_bank_account" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="12dp"
            android:background="#f1f1f1" />

        <Button
            android:id="@+id/my_details"
            style="@style/BottomSheetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_list"
            android:text="@string/my_details" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="12dp"
            android:background="#f1f1f1" />

        <Button
            android:id="@+id/my_payment_address"
            style="@style/BottomSheetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_home"
            android:text="@string/my_payment_address" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="12dp"
            android:background="#f1f1f1" />

        <Button
            android:id="@+id/manage_beneficiary"
            style="@style/BottomSheetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_people"
            android:text="@string/manage_beneficiary" />
    </LinearLayout>
</LinearLayout>